--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       href="assets/img/logo/favicon.png"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
@@ -1991,13 +1996,12 @@
         <!-- Top Category Section -->
         <div class="top-category-row">
           <div class="top-category-wrapper">
-            <img
-              src="./assets/img/Fasion/icons8-home-24.png"
-              alt="Home"
-              class="top-category-icon"
-            />
+            <!-- Font Awesome Home Icon using <i> tag -->
+            <i class="fas fa-home" style="font-size: 24px; color: #333"></i>
+
             <div class="top-category-label">Home</div>
           </div>
+
           <div class="top-category-wrapper">
             <img
               src="./assets/img/Fasion/i6.jpeg"
@@ -2282,6 +2286,7 @@
                     src="https://www.lavanyathelabel.com/cdn/shop/collections/04_ethnicwear_1400x_a34fb8dc-f016-43eb-95bd-bec3858edc01_1400x.webp?v=1732004280"
                     alt="Winterwear"
                     class="img-fluid w-100"
+                    style="margin-top: -20px"
                   />
                 </a>
               </div>
@@ -2292,254 +2297,54 @@
 
       <!-- slider area end -->
 
-      <!-- banner area start -->
-      <section class="tp-banner-area mt-20">
+      <!-- offer section  start-->
+
+      <section class="tp-webp-banner-area mt-20">
         <div class="container-fluid tp-gx-40">
           <div class="row tp-gx-20">
-            <div class="col-xxl-4 col-lg-6">
-              <div
-                class="tp-banner-item-2 p-relative z-index-1 mb-20 fix d-flex flex-row-reverse"
-                style="
-                  background: linear-gradient(to bottom, blue, black);
-                  height: 300px;
-                  overflow: hidden;
-                "
-              >
-                <!-- Image on the right -->
-                <div
-                  class="tp-banner-thumb-2 include-bg transition-3"
-                  style="
-                    background-image: url('./assets/img/Fasion/Soch_564x940._SY530_QL85_-removebg-preview.png');
-                    background-size: contain;
-                    background-position: center;
-                    height: 100%;
-                    width: 50%;
-                    margin-top: 10px;
-                    margin-right: 10px;
-                  "
-                ></div>
-
-                <!-- Text on the left -->
-                <div
-                  class="tp-banner-content"
-                  style="
-                    width: 50%;
-                    padding: 20px;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    height: 100%;
-                  "
-                >
-                  <h3
-                    class="tp-banner-title-2"
-                    style="color: white; margin-bottom: 10px"
-                  >
-                    <a
-                      href="shop.html"
-                      style="color: white; text-decoration: none"
-                      >Suit and Salwar <br />Ethnic Wear</a
-                    >
-                  </h3>
-
-                  <!-- Offer Content Box -->
-                  <div class="offer-content-box">
-                    <p
-                      class="offer-text"
-                      style="
-                        font-size: 16px;
-                        color: lightpink;
-                        font-weight: bold;
-                      "
-                    >
-                      50% Off on Select Ethnic Wear!
-                    </p>
-                  </div>
-
-                  <!-- Shop Now Button -->
-                  <div class="tp-banner-btn-2">
-                    <a
-                      href="shop.html"
-                      class="tp-btn tp-btn-border tp-btn-border-sm"
-                      style="background-color: white"
-                      >Shop Now
-                      <svg
-                        width="17"
-                        height="15"
-                        viewBox="0 0 17 15"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M16 7.49988L1 7.49988"
-                          stroke="currentColor"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                        <path
-                          d="M9.9502 1.47554L16.0002 7.49954L9.9502 13.5245"
-                          stroke="currentColor"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xxl-4 col-lg-6">
-              <div
-                class="tp-banner-item-2 p-relative z-index-1 mb-20 fix d-flex flex-row-reverse"
-                style="
-                  background: linear-gradient(to bottom, cyan, black);
-                  height: 300px;
-                  overflow: hidden;
-                "
-              >
-                <!-- Image on the right -->
-
-                <!-- <img src="./assets/img/Fasion/girls._CB469401626_-removebg-preview.png" alt=""> -->
-                <div
-                  class="tp-banner-thumb-2 include-bg transition-3"
-                  style="
-                    background-image: url('./assets/img/Fasion/girls._CB469401626_-removebg-preview.png');
-                    background-size: contain;
-                    background-position: center;
-                    height: 100%;
-                    width: 50%;
-                    margin-top: 10px;
-                    margin-right: 10px;
-                  "
-                ></div>
-
-                <!-- Text on the left -->
-                <div
-                  class="tp-banner-content"
-                  style="
-                    width: 50%;
-                    padding: 20px;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    height: 100%;
-                  "
-                >
-                  <h3
-                    class="tp-banner-title-2"
-                    style="color: white; margin-bottom: 10px"
-                  >
-                    <a
-                      href="shop.html"
-                      style="color: white; text-decoration: none"
-                    >
-                      Kids Fashion <br />Clothing Collection
-                    </a>
-                  </h3>
-
-                  <!-- Offer Content Box -->
-                  <div class="offer-content-box">
-                    <p
-                      class="offer-text"
-                      style="
-                        font-size: 16px;
-                        color: lightpink;
-                        font-weight: bold;
-                      "
-                    >
-                      Buy One, Get One Free <br />on All Collection!
-                    </p>
-                  </div>
-
-                  <!-- Shop Now Button -->
-                  <div class="tp-banner-btn-2">
-                    <a
-                      href="shop.html"
-                      class="tp-btn tp-btn-border tp-btn-border-sm"
-                      style="background-color: white"
-                      >Shop Now
-                      <svg
-                        width="17"
-                        height="15"
-                        viewBox="0 0 17 15"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M16 7.49988L1 7.49988"
-                          stroke="currentColor"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                        <path
-                          d="M9.9502 1.47554L16.0002 7.49954L9.9502 13.5245"
-                          stroke="currentColor"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        />
-                      </svg>
-                    </a>
-                  </div>
-                </div>
+            <!-- First Image -->
+            <div class="col-xxl-4 col-lg-4">
+              <div class="tp-webp-item-2 p-relative z-index-1 mb-10">
+                <img
+                  src="https://www.lavanyathelabel.com/cdn/shop/files/New-Arrival-Strip-HomePage_Desktop.gif?v=1735554595"
+                  alt="Image 1"
+                  class="img-fluid"
+                  style="width: 100%; height: 100px; object-fit: cover"
+                />
               </div>
             </div>
 
-            <!-- <div class="col-xxl-4 col-lg-6">
-              <div
-                class="tp-banner-item-2 p-relative z-index-1 grey-bg-2 mb-20 fix"
-              >
-                <div
-                  class="tp-banner-thumb-2 include-bg transition-3"
-                  data-background="assets/img/banner/2/banner-3.jpg"
-                ></div>
-                <h3 class="tp-banner-title-2">
-                  <a href="shop.html"
-                    >Men's Tennis <br />
-                    Walking Shoes</a
-                  >
-                </h3>
-                <div class="tp-banner-btn-2">
-                  <a
-                    href="shop.html"
-                    class="tp-btn tp-btn-border tp-btn-border-sm"
-                    >Shop Now
-                    <svg
-                      width="17"
-                      height="15"
-                      viewBox="0 0 17 15"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M16 7.49988L1 7.49988"
-                        stroke="currentColor"
-                        stroke-width="1.5"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
-                      <path
-                        d="M9.9502 1.47554L16.0002 7.49954L9.9502 13.5245"
-                        stroke="currentColor"
-                        stroke-width="1.5"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
-                    </svg>
-                  </a>
-                </div>
+            <!-- Second Image -->
+            <div class="col-xxl-4 col-lg-4">
+              <div class="tp-webp-item-2 p-relative z-index-1 mb-10">
+                <img
+                  src="https://www.lavanyathelabel.com/cdn/shop/collections/08_Shadi_banner_1400x.jpg?v=1727334899"
+                  alt="Image 2"
+                  class="img-fluid"
+                  style="width: 100%; height: 100px; object-fit: cover"
+                />
               </div>
-            </div> -->
+            </div>
+
+            <!-- Third Image -->
+            <div class="col-xxl-4 col-lg-4">
+              <div class="tp-webp-item-2 p-relative z-index-1 mb-10">
+                <img
+                  src="https://cdn.shopify.com/s/files/1/0682/3755/8034/files/SALE_CATEGORY.jpg?v=1735893279"
+                  alt="Image 3"
+                  class="img-fluid"
+                  style="width: 100%; height: 100px; object-fit: cover"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </section>
-      <!-- banner area end -->
+
+      <!-- offer section end -->
 
       <!-- category area start -->
-      <section class="tp-category-area pb-95 pt-95">
+      <section class="tp-category-area pb-95 pt-95" style="margin-top: -80px">
         <div class="container">
           <div class="row">
             <div class="col-xl-12">
