--- a/index.html
+++ b/index.html
@@ -767,14 +767,17 @@
 
     <!-- header area start -->
     <header>
-      <div class="tp-header-area tp-header-style-darkRed tp-header-height">
+      <div
+        class="tp-header-area tp-header-style-darkRed tp-header-height"
+        style="margin-bottom: -26px; margin-top: -35px"
+      >
         <!-- header top start  -->
         <div
           class="tp-header-top-2 p-relative z-index-11 tp-header-top-border d-none d-md-block"
         >
           <div class="container">
             <div class="row align-items-center">
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <div class="tp-header-info d-flex align-items-center">
                   <div class="tp-header-info-item">
                     <a href="#">
@@ -834,7 +837,7 @@
                     </a>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="col-md-6">
                 <div
                   class="tp-header-top-right tp-header-top-black d-flex align-items-center justify-content-end"
@@ -2013,6 +2016,7 @@
           <div class="top-category-wrapper">
             <img
               src="./assets/img/Fasion/i4.jpeg"
+              F
               alt="Men"
               class="top-category-img"
             />
@@ -2368,7 +2372,9 @@
                     />
                   </svg>
                 </span>
-                <h3 class="tp-section-title-2">Popular on the Shofy store.</h3>
+                <h3 class="tp-section-title-2">
+                  Popular on the Khazoor store.
+                </h3>
               </div>
             </div>
           </div>
@@ -2383,15 +2389,18 @@
                       <div class="tp-category-thumb-2">
                         <a href="#">
                           <img
-                            src="assets/img/category/category-1.jpg"
+                            src="assets/img/Fasion/517vlQFw-wL._AC_UL165_SR165,165_.jpg"
                             alt=""
+                            style="height: 200px"
                           />
                         </a>
                       </div>
                       <div class="tp-category-content-2">
-                        <span>From INR34.95</span>
+                        <span>From INR3405</span>
                         <h3 class="tp-category-title-2">
-                          <a href="product-details.html">Crew Neck T-shirt</a>
+                          <a href="product-details.html"
+                            >Women's Beautiful Embroidered Lehenga</a
+                          >
                         </h3>
                         <div class="tp-category-btn-2">
                           <a
@@ -2409,15 +2418,18 @@
                       <div class="tp-category-thumb-2">
                         <a href="#">
                           <img
-                            src="assets/img/category/category-2.jpg"
+                            src="assets/img/Fasion/51ZnoqNp+ZL._AC_UL165_SR165,165_.jpg"
                             alt=""
+                            style="height: 200px"
                           />
                         </a>
                       </div>
                       <div class="tp-category-content-2">
-                        <span>From INR34.95</span>
+                        <span>From INR1400.00</span>
                         <h3 class="tp-category-title-2">
-                          <a href="product-details.html">Crew Neck T-shirt</a>
+                          <a href="product-details.html"
+                            >Women's Beautiful Embroidered Bridal Lehenga</a
+                          >
                         </h3>
                         <div class="tp-category-btn-2">
                           <a
@@ -2435,15 +2447,18 @@
                       <div class="tp-category-thumb-2">
                         <a href="#">
                           <img
-                            src="assets/img/category/category-3.jpg"
+                            src="assets/img/Fasion/517NQCpUEdL._AC_UL165_SR165,165_.jpg"
                             alt=""
+                            style="height: 200px"
                           />
                         </a>
                       </div>
                       <div class="tp-category-content-2">
-                        <span>From INR34.95</span>
+                        <span>From INR1695.00</span>
                         <h3 class="tp-category-title-2">
-                          <a href="product-details.html">Crew Neck T-shirt</a>
+                          <a href="product-details.html"
+                            >Women's Beautiful Lehenga</a
+                          >
                         </h3>
                         <div class="tp-category-btn-2">
                           <a
@@ -2461,15 +2476,18 @@
                       <div class="tp-category-thumb-2">
                         <a href="#">
                           <img
-                            src="assets/img/category/category-4.jpg"
+                            src="assets/img/Fasion/51JrE2U4ihL._AC_SY200_.jpg"
                             alt=""
+                            style="height: 200px"
                           />
                         </a>
                       </div>
                       <div class="tp-category-content-2">
-                        <span>From INR34.95</span>
+                        <span>From INR34095</span>
                         <h3 class="tp-category-title-2">
-                          <a href="product-details.html">Crew Neck T-shirt</a>
+                          <a href="product-details.html"
+                            >Women's Embroidered Bridal Lehenga</a
+                          >
                         </h3>
                         <div class="tp-category-btn-2">
                           <a
@@ -2487,15 +2505,16 @@
                       <div class="tp-category-thumb-2">
                         <a href="#">
                           <img
-                            src="assets/img/category/category-5.jpg"
+                            src="assets/img/Fasion/51zkD6u86-L._AC_SY200_.jpg"
                             alt=""
+                            style="height: 200px"
                           />
                         </a>
                       </div>
                       <div class="tp-category-content-2">
-                        <span>From INR34.95</span>
+                        <span>From INR3495</span>
                         <h3 class="tp-category-title-2">
-                          <a href="product-details.html">Crew Neck T-shirt</a>
+                          <a href="product-details.html">Women's Lehenga</a>
                         </h3>
                         <div class="tp-category-btn-2">
                           <a
@@ -2513,13 +2532,14 @@
                       <div class="tp-category-thumb-2">
                         <a href="#">
                           <img
-                            src="assets/img/category/category-6.jpg"
+                            src="assets/img/Fasion/51ZnoqNp+ZL._AC_UL165_SR165,165_.jpg"
                             alt=""
+                            style="height: 200px"
                           />
                         </a>
                       </div>
                       <div class="tp-category-content-2">
-                        <span>From INR34.95</span>
+                        <span>From INR34095</span>
                         <h3 class="tp-category-title-2">
                           <a href="product-details.html">Crew Neck T-shirt</a>
                         </h3>
@@ -12274,7 +12294,7 @@
     </main>
 
     <!-- footer area start -->
-    <footer>
+    <footer style="margin-bottom: -378px">
       <div
         class="tp-footer-area tp-footer-style-2"
         data-bg-color="footer-bg-white"
