--- a/index.html
+++ b/index.html
@@ -932,10 +932,10 @@
                   <div class="main-menu menu-style-2">
                     <nav class="tp-main-menu-content">
                       <ul>
-                        <li class="has-dropdown has-mega-menu">
+                        <li class="has has-mega-menu">
                           <a href="index.html">Home</a>
                           <div class="home-menu tp-submenu tp-mega-menu">
-                            <div
+                            <!-- <div
                               class="row row-cols-1 row-cols-lg-4 row-cols-xl-5"
                             >
                               <div class="col">
@@ -1015,12 +1015,12 @@
                                   </a>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                           </div>
                         </li>
-                        <li class="has-dropdown has-mega-menu">
+                        <li class="has has-mega-menu">
                           <a href="shop.html">Shop</a>
-                          <div class="shop-mega-menu tp-submenu tp-mega-menu">
+                          <!-- <div class="shop-mega-menu tp-submenu tp-mega-menu">
                             <div class="row">
                               <div class="col-lg-2">
                                 <div class="shop-mega-menu-list">
@@ -1167,12 +1167,11 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                         </li>
-                        <li class="has-dropdown has-mega-menu">
-                          <a href="shop.html">Products</a>
+                        <li class="has has-mega-menu">
+                          <a href="product-details.html">Products</a>
                           <ul class="tp-submenu tp-mega-menu mega-menu-style-2">
-                            <!-- first col -->
                             <li class="has-dropdown">
                               <a href="shop.html" class="mega-menu-title"
                                 >Shop Page</a
@@ -1292,9 +1291,9 @@
                           </ul>
                         </li>
                         <li><a href="coupon.html">Coupons</a></li>
-                        <li class="has-dropdown">
+                        <li class="has">
                           <a href="blog.html">Blog</a>
-                          <ul class="tp-submenu">
+                          <!-- <ul class="tp-submenu">
                             <li><a href="blog.html">Blog Standard</a></li>
                             <li><a href="blog-grid.html">Blog Grid</a></li>
                             <li><a href="blog-list.html">Blog List</a></li>
@@ -1306,7 +1305,7 @@
                             <li>
                               <a href="blog-details.html">Blog Details</a>
                             </li>
-                          </ul>
+                          </ul> -->
                         </li>
                         <li><a href="contact.html">Contact</a></li>
                       </ul>
@@ -2387,14 +2386,13 @@
                       class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
                     >
                       <div class="tp-category-thumb-2">
-                        <a href="#">
-                          <img
-                            src="assets/img/Fasion/517vlQFw-wL._AC_UL165_SR165,165_.jpg"
-                            alt=""
-                            style="height: 200px"
-                          />
-                        </a>
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4118_82714b7c-dedb-42da-9c89-bdb3360ad1e4_1200x.jpg?v=1735979930"
+                          alt="Stylish women’s clothing by Lavanya the Label, product image"
+                          style="height: 250px; width: auto"
+                        />
                       </div>
+
                       <div class="tp-category-content-2">
                         <span>From INR3405</span>
                         <h3 class="tp-category-title-2">
@@ -2416,19 +2414,18 @@
                       class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
                     >
                       <div class="tp-category-thumb-2">
-                        <a href="#">
-                          <img
-                            src="assets/img/Fasion/51ZnoqNp+ZL._AC_UL165_SR165,165_.jpg"
-                            alt=""
-                            style="height: 200px"
-                          />
-                        </a>
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/LBL101KS437_2_1200x.jpg?v=1735980799"
+                          alt="Stylish women’s clothing by Lavanya the Label, product image"
+                          style="height: 250px; width: auto"
+                        />
                       </div>
+
                       <div class="tp-category-content-2">
-                        <span>From INR1400.00</span>
+                        <span>From INR3405</span>
                         <h3 class="tp-category-title-2">
                           <a href="product-details.html"
-                            >Women's Beautiful Embroidered Bridal Lehenga</a
+                            >Women's Beautiful Embroidered Lehenga</a
                           >
                         </h3>
                         <div class="tp-category-btn-2">
@@ -2445,19 +2442,18 @@
                       class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
                     >
                       <div class="tp-category-thumb-2">
-                        <a href="#">
-                          <img
-                            src="assets/img/Fasion/517NQCpUEdL._AC_UL165_SR165,165_.jpg"
-                            alt=""
-                            style="height: 200px"
-                          />
-                        </a>
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4230_0cbb5518-8fdc-400b-9478-9a883fca53d4_1200x.jpg?v=1735979921"
+                          alt="Stylish women’s clothing by Lavanya the Label, product image"
+                          style="height: 250px; width: auto"
+                        />
                       </div>
+
                       <div class="tp-category-content-2">
-                        <span>From INR1695.00</span>
+                        <span>From INR3405</span>
                         <h3 class="tp-category-title-2">
                           <a href="product-details.html"
-                            >Women's Beautiful Lehenga</a
+                            >Women's Beautiful Embroidered Lehenga</a
                           >
                         </h3>
                         <div class="tp-category-btn-2">
@@ -2474,19 +2470,47 @@
                       class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
                     >
                       <div class="tp-category-thumb-2">
-                        <a href="#">
-                          <img
-                            src="assets/img/Fasion/51JrE2U4ihL._AC_SY200_.jpg"
-                            alt=""
-                            style="height: 200px"
-                          />
-                        </a>
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/0H8A4283_460a4d31-fab9-4c99-9cbe-7b196986a843_1200x.jpg?v=1735979928"
+                          alt="Stylish women’s clothing by Lavanya the Label, product image"
+                          style="height: 250px; width: auto"
+                        />
                       </div>
+
                       <div class="tp-category-content-2">
-                        <span>From INR34095</span>
+                        <span>From INR3405</span>
                         <h3 class="tp-category-title-2">
                           <a href="product-details.html"
-                            >Women's Embroidered Bridal Lehenga</a
+                            >Women's Beautiful Embroidered Lehenga</a
+                          >
+                        </h3>
+                        <div class="tp-category-btn-2">
+                          <a
+                            href="product-details.html"
+                            class="tp-btn tp-btn-border"
+                          >
+                            Add to Cart</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+
+                    <div
+                      class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
+                    >
+                      <div class="tp-category-thumb-2">
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/ChocolateBrown_1_1200x.jpg?v=1735980967"
+                          alt="Stylish women’s clothing by Lavanya the Label, product image"
+                          style="height: 250px; width: auto"
+                        />
+                      </div>
+
+                      <div class="tp-category-content-2">
+                        <span>From INR3405</span>
+                        <h3 class="tp-category-title-2">
+                          <a href="product-details.html"
+                            >Women's Beautiful Embroidered Lehenga</a
                           >
                         </h3>
                         <div class="tp-category-btn-2">
@@ -2503,45 +2527,19 @@
                       class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
                     >
                       <div class="tp-category-thumb-2">
-                        <a href="#">
-                          <img
-                            src="assets/img/Fasion/51zkD6u86-L._AC_SY200_.jpg"
-                            alt=""
-                            style="height: 200px"
-                          />
-                        </a>
+                        <img
+                          src="https://www.lavanyathelabel.com/cdn/shop/files/LBL101KS425_2_ba94aa72-7e56-4861-8e3e-0dfd0fcb008c_1200x.jpg?v=1735980862"
+                          alt="Stylish women’s clothing by Lavanya the Label, product image"
+                          style="height: 250px; width: auto"
+                        />
                       </div>
+
                       <div class="tp-category-content-2">
-                        <span>From INR3495</span>
+                        <span>From INR3405</span>
                         <h3 class="tp-category-title-2">
-                          <a href="product-details.html">Women's Lehenga</a>
-                        </h3>
-                        <div class="tp-category-btn-2">
-                          <a
-                            href="product-details.html"
-                            class="tp-btn tp-btn-border"
+                          <a href="product-details.html"
+                            >Women's Beautiful Embroidered Lehenga</a
                           >
-                            Add to Cart</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      class="tp-category-item-2 p-relative z-index-1 text-center swiper-slide"
-                    >
-                      <div class="tp-category-thumb-2">
-                        <a href="#">
-                          <img
-                            src="assets/img/Fasion/51ZnoqNp+ZL._AC_UL165_SR165,165_.jpg"
-                            alt=""
-                            style="height: 200px"
-                          />
-                        </a>
-                      </div>
-                      <div class="tp-category-content-2">
-                        <span>From INR34095</span>
-                        <h3 class="tp-category-title-2">
-                          <a href="product-details.html">Crew Neck T-shirt</a>
                         </h3>
                         <div class="tp-category-btn-2">
                           <a
